# Rover-Code

./: .gitignore  .gitmodules  15-rover.rules  CHANGELOG.md  README.md  _build.sh  all_devices.dart  all_programs.dart  analysis_options.yaml  build.bat  build.sh  dart_test.yaml  dartdoc_options.yaml  device_finder.py  environment.yml  install.sh  lidar.launch  pubspec.yaml  requirements.txt  rover_config.example.json  temp.service
.dart_tool/: package_config.json
lidar/src/: CMakeLists.txt  image.cpp  image.h  lidar.cpp  lidar.h  main.cpp  server.cpp  udp.cpp  udp.hpp
lidar/src/UDP/: client  client.cpp  server  server.cpp
src/: CMakeLists.txt  lidar.cpp  lidar.h
vision/: .gitignore  README.md  cli.py  environment.yml  pyproject.toml  requirements.txt
vision/BURT-Test-1/: README.dataset.txt  README.roboflow.txt
vision/BURT-Test-1/test/labels/: IMG_0451_JPG.rf.adb39cba7641dc6b9552fb4b50315e64.txt  IMG_0461_JPG.rf.a9a03db57f68c174918b72b14ba02384.txt
vision/BURT-Test-1/train/labels/: IMG_0446_JPG.rf.8d63578e5d570f47ed7967daba7da135.txt  IMG_0448_JPG.rf.8f13d53a6ad677ebaade96028f63dae3.txt  IMG_0449_JPG.rf.2937805c05f2c57175577dec428daeef.txt  IMG_0450_JPG.rf.a35a6f9e02339fe73a7854c9da21b83e.txt  IMG_0453_JPG.rf.2ea4c409160d4d6cd545f92bc465dc78.txt  IMG_0454_JPG.rf.c113891341b889586b8fcd0969d6cc39.txt  IMG_0455_JPG.rf.762565442eaad798d9e67484d29ec6aa.txt  IMG_0456_JPG.rf.83258b2b7d520a32bb424d85e42b00cd.txt  IMG_0458_JPG.rf.9b27bab567458c6c6ca18024eabcb222.txt  IMG_0460_JPG.rf.647d6d17f5b1cce2a0ad90373832c7f8.txt  IMG_0462_JPG.rf.65b4bc6c1d335651dc1d1a06f2c5d8ee.txt  IMG_0463_JPG.rf.59c3f8d6cc28ad3571cefd1eeb46029d.txt  IMG_0464_JPG.rf.d3c37e3b05d8e6c0b814af29de24e9ae.txt  IMG_0467_JPG.rf.c0e0c5b43316fe94ad2a95155012564f.txt  IMG_0468_JPG.rf.2ba2b852f527729748fb207b99681f57.txt  IMG_0469_JPG.rf.3499cda520bef01ece46ff55df4f4dfc.txt
vision/BURT-Test-1/valid/labels/: IMG_0447_JPG.rf.a19c4bd09fe9d4cf9df238aafb9ec181.txt  IMG_0452_JPG.rf.f2db4b9619dd5f570a840b7f37bb1d02.txt  IMG_0457_JPG.rf.5144d54efe3d456b03b8f22dfd46e60f.txt  IMG_0459_JPG.rf.04bcc88de389503bef6a2e87419f53f4.txt  IMG_0466_JPG.rf.172a8f20b9d939d4971cc9fc15e59db6.txt
vision/Mallet Images.v1i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
vision/Mallet Images.v1i.yolov11/test/labels/: aug_0_325_jpg.rf.f3cfea0f57e464b44aa1f00ed2a6c2c6.txt  aug_0_4893_jpg.rf.e28df1f4e2b57b45fcb3979667d8dc16.txt  aug_0_4902_jpg.rf.7a5a8a84a7085ed35592afc09f40e2be.txt  aug_10_1488_jpg.rf.7f0b84222567afa0d499a57063e7db62.txt  aug_10_159_jpg.rf.49bbca1dd3a93da90bff95b8897a58c9.txt  aug_10_3679_jpg.rf.d5f006eb682f175deda93c4fb1967565.txt  aug_10_8281_jpg.rf.8da7b1b3997f23fa06da502c9ec797b4.txt  aug_11_1841_jpg.rf.01537491def1e3c14407d1189eab84f8.txt  aug_11_5613_jpg.rf.72fe656b44ab11efec1969f2338a6202.txt  aug_11_7867_jpg.rf.29f11523637210389096e497c74dfaca.txt  aug_11_85_jpg.rf.7926682c1377cff3ca9db781eb49e73a.txt  aug_11_9668_jpg.rf.1c2ea4a49e8aef0f8eddb3340e3d2b6d.txt  aug_12_1727_jpg.rf.c4df7bf890d15ffacf9b65aa79916133.txt  aug_12_5451_jpg.rf.a7a73e35f5376505c8578fa50bf1b859.txt  aug_12_6664_jpg.rf.70cee1868608bcdafeb833a083fe0379.txt  aug_12_8298_jpg.rf.b774745855c8eb336ea62958804be975.txt  aug_12_8720_jpg.rf.8937e63bbaa060c470f98c436e68cfc7.txt  aug_12_9282_jpg.rf.1095696fc89881754029152f36e9fac7.txt  aug_12_9751_jpg.rf.a48eb1c6bb4a2c6a1a8758e7fa9a4a0d.txt  aug_13_3453_jpg.rf.20950b727ea567d07c21dd746f2c8cce.txt  (+78 more)
vision/depth/: create_file.py  keyboard_depth_estimation.py
vision/lib/: analyzer.py  analyzer_server.py  trainer.py
(+1747 files in other folders)
